<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_sign_in_text">Sign In</string>
    <string name="login_edittext_hint">Enter login</string>
    <string name="login_password_hint">Enter password</string>
    <string name="login_error_message">Sorry, your login/password didn\'t passed validation</string>
    <string name="logout_user">Logout User</string>
    <string name="check_sign_in_user">check sign in status</string>
    <string name="create_new_user">Create new user</string>
    <string name="toast_success">Success</string>
    <string name="sign_in_true">Signed in</string>
    <string name="welcome">Welcome !</string>
    <string name="firebase_dto_error">Sorry, something wrong</string>

    <string name="validation_password_to_small">to short password</string>
    <string name="validation_password_wrong_characters">wrong characters</string>
    <string name="validation_password_no_upper_case">no uppercase</string>
    <string name="validation_password_no_lower_case">no lowercase</string>
    <string name="validation_password_no_digit">no digit</string>
    <string name="validation_password_empty_password">password cannot be empty</string>

    <string name="validation_login_to_small">to short login</string>
    <string name="validation_login_wrong_characters">wrong characters</string>
    <string name="validation_login_missing_at_sign">missing @ sign</string>
    <string name="validation_login_wrong_email_domain_usage">wrong user email domain</string>
    <string name="validation_login_too_long_domain">login domain is too long</string>
    <string name="validation_login_empty_login">login cannot be empty</string>
    <string name="unknown_error">Unknown error</string>
</resources>